--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -716,6 +716,7 @@
     "    \n",
     "    '''\n",
     "    # Your code here\n",
+    "    top_articles = df[\"title\"].value_counts().index[:n]\n",
     "    \n",
     "    return top_articles # Return the top article titles from df (not df_content)\n",
     "\n",
@@ -726,21 +727,42 @@
     "    df - (pandas dataframe) df as defined at the top of the notebook \n",
     "    \n",
     "    OUTPUT:\n",
-    "    top_articles - (list) A list of the top 'n' article titles \n",
+    "    top_articles - (list) A list of the top 'n' article ids \n",
     "    \n",
     "    '''\n",
     "    # Your code here\n",
-    " \n",
+    "    top_articles = df[\"article_id\"].value_counts().index[:n]\n",
     "    return top_articles # Return the top article ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['use deep learning for image classification',\n",
+      "       'insights from new york car accident reports',\n",
+      "       'visualize car data with brunel',\n",
+      "       'use xgboost, scikit-learn & ibm watson machine learning apis',\n",
+      "       'predicting churn with the spss random tree algorithm',\n",
+      "       'healthcare python streaming application demo',\n",
+      "       'finding optimal locations of new store using decision optimization',\n",
+      "       'apache spark lab, part 1: basic concepts',\n",
+      "       'analyze energy consumption in buildings',\n",
+      "       'gosales transactions for logistic regression model'],\n",
+      "      dtype='object')\n",
+      "Float64Index([1429.0, 1330.0, 1431.0, 1427.0, 1364.0, 1314.0, 1293.0, 1170.0,\n",
+      "              1162.0, 1304.0],\n",
+      "             dtype='float64')\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_top_articles(10))\n",
     "print(get_top_article_ids(10))"
@@ -748,11 +770,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your top_5 looks like the solution list! Nice job.\n",
+      "Your top_10 looks like the solution list! Nice job.\n",
+      "Your top_20 looks like the solution list! Nice job.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function by returning the top 5, 10, and 20 articles\n",
     "top_5 = get_top_articles(5)\n",
