--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 213,
    "metadata": {
     "collapsed": true
    },
@@ -1186,10 +1186,25 @@
     "    neighbors_df = neighbors_df.join(user_counts,on=\"neighbor_id\")\n",
     "    # neighbors_df.columns = [\"neighbor_id\",\"similarity\",\"num_interactions\"]\n",
     "    neighbors_df = neighbors_df[neighbors_df.neighbor_id != user_id]\n",
-    "    neighbors_df = neighbors_df.sort_values([\"similarity\",\"num_interactions\"], ascending=False)\n",
+    "    neighbors_df = neighbors_df.sort_values([\"similarity\",\"num_interactions\"], ascending=False).reset_index(drop=True)\n",
     "       \n",
     "    return neighbors_df # Return the dataframe specified in the doc_string\n",
     "\n",
+    "def get_article_rank(article_id, df=df):\n",
+    "    '''\n",
+    "    INPUT:\n",
+    "    article_id - (str) article_id as a string with a single decimal place\n",
+    "    df - (dataframe) df as defined above\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    rank - (int) the number of interactions involving this article\n",
+    "\n",
+    "    Description:\n",
+    "    Can be used to get the rank of an article\n",
+    "    '''\n",
+    "    top_articles = df[\"article_id\"].value_counts()\n",
+    "    return top_articles.loc[article_id]\n",
+    "    \n",
     "\n",
     "def user_user_recs_part2(user_id, m=10):\n",
     "    '''\n",
@@ -1215,101 +1230,55 @@
     "   \n",
     "    '''\n",
     "    # Your code here\n",
-    "    pass\n",
-    "    # return recs, rec_names"
+    "    recs = [] # needs to be a list this time, since it is ordered\n",
+    "    articles_this_user_has_read = get_user_articles(user_id)[0]\n",
+    "\n",
+    "    similar_users = get_top_sorted_users(user_id)[\"neighbor_id\"].tolist()[::-1] # reverse the list so I can pop users off it efficiently\n",
+    "    \n",
+    "    while len(recs) < 10:\n",
+    "        current_other_user = similar_users.pop()\n",
+    "        current_other_user_articles = list(get_user_articles(current_other_user)[0])\n",
+    "        current_other_user_articles = sorted(current_other_user_articles, key=lambda x: get_article_rank(x))\n",
+    "        \n",
+    "        while current_other_user_articles:\n",
+    "            maybe_new_article = current_other_user_articles.pop()\n",
+    "            if (maybe_new_article not in articles_this_user_has_read) and (maybe_new_article not in recs):\n",
+    "                recs.append(maybe_new_article)\n",
+    "                # print(recs)\n",
+    "            if len(recs) >= 10: break\n",
+    "        rec_names = get_article_names(recs)   \n",
+    "    \n",
+    "    return recs, rec_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>neighbor_id</th>\n",
-       "      <th>similarity</th>\n",
-       "      <th>num_interactions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3524</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>131</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>3870</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2975</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>58.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   neighbor_id  similarity  num_interactions\n",
-       "1           12         4.0               5.0\n",
-       "0         3524         4.0               4.0\n",
-       "3          131         3.0              75.0\n",
-       "9         3870         3.0              75.0\n",
-       "6         2975         3.0              58.0"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_top_sorted_users('3524.0').head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The top 10 recommendations for user 20 are the following article ids:\n",
+      "['1429.0', '1330.0', '1314.0', '1293.0', '1162.0', '1271.0', '43.0', '1351.0', '1368.0', '1305.0']\n",
+      "\n",
+      "The top 10 recommendations for user 20 are the following article names:\n",
+      "['healthcare python streaming application demo'\n",
+      " 'use deep learning for image classification'\n",
+      " 'analyze energy consumption in buildings'\n",
+      " 'putting a human face on machine learning'\n",
+      " 'gosales transactions for naive bayes model'\n",
+      " 'insights from new york car accident reports'\n",
+      " 'model bike sharing data with spss'\n",
+      " 'finding optimal locations of new store using decision optimization'\n",
+      " 'deep learning with tensorflow course by big data university'\n",
+      " 'customer demographics and sales']\n"
+     ]
+    }
+   ],
    "source": [
     "# Quick spot check - don't change this code - just use it to test your functions\n",
     "rec_ids, rec_names = user_user_recs_part2(20, 10)\n",
@@ -1329,7 +1298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_top_sorted_users(131).loc[10,'neighbor_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
    "metadata": {
     "collapsed": true
    },
@@ -1337,17 +1326,25 @@
    "source": [
     "### Tests with a dictionary of results\n",
     "\n",
-    "user1_most_sim = # Find the user that is most similar to user 1 \n",
-    "user131_10th_sim = # Find the 10th most similar user to user 131"
+    "user1_most_sim = get_top_sorted_users(1).loc[0,'neighbor_id'] # Find the user that is most similar to user 1 \n",
+    "user131_10th_sim = get_top_sorted_users(131).loc[10,'neighbor_id'] # Find the 10th most similar user to user 131"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This all looks good!  Nice job!\n"
+     ]
+    }
+   ],
    "source": [
     "## Dictionary Test Here\n",
     "sol_5_dict = {\n",
@@ -1369,7 +1366,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**Provide your response here.**\n",
+    "\n",
+    "Currently, we depend on similarity to other users (based on past behavior) to drive recommendations. For the cold start problem, I would recommend simply recommending the overall top 10 articles, as provided by \"get_top_articles\".\n",
+    "\n",
+    "Alternatively, we could prompt a new user for some inputs once they sign up for our site. If we had a \"friend\" system on our site, we could use those friends as sources of recommedations. We could also ask the user what topics they are interested in, but this would depend on us building a latent-feature tracking system. \n",
+    "\n",
+    "In the interest of simplicity, I would probably just recommend the top 10 overall articles, then start building up a history for the user."
    ]
   },
   {
