added docs for boolean aray

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -2109,6 +2109,7 @@
     "# Use these cells to see how well you can use the training \n",
     "# decomposition to predict on test data\n",
     "\n",
+    "# using boolean array indexing to match the np index to the df indices: https://numpy.org/devdocs/user/basics.indexing.html#boolean-array-indexing\n",
     "user_valid_mask = user_item_train.index.isin(test_idx)\n",
     "arts_valid_mask = user_item_train.title.columns.isin(test_arts) # all articles are valid\n"
    ]
