added recommended changes to notebook

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +155,7 @@
        "4      Analyze NY Restaurant data using Spark in DSX       Live           4  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -440,7 +440,7 @@
        "970                              Use the Primary Index       Live         577  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -533,52 +533,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1429.0    937\n",
-       "1330.0    927\n",
-       "1431.0    671\n",
-       "1427.0    643\n",
-       "1364.0    627\n",
-       "         ... \n",
-       "1344.0      1\n",
-       "984.0       1\n",
-       "1113.0      1\n",
-       "675.0       1\n",
-       "662.0       1\n",
-       "Name: article_id, Length: 714, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1429.0    937\n",
+      "1330.0    927\n",
+      "1431.0    671\n",
+      "1427.0    643\n",
+      "1364.0    627\n",
+      "         ... \n",
+      "1344.0      1\n",
+      "984.0       1\n",
+      "1113.0      1\n",
+      "675.0       1\n",
+      "662.0       1\n",
+      "Name: article_id, Length: 714, dtype: int64\n",
+      "1429.0\n",
+      "937\n"
+     ]
     }
    ],
    "source": [
-    "df.article_id.value_counts(dropna=False)"
+    "print(df.article_id.value_counts(dropna=False))\n",
+    "print(df.article_id.value_counts(dropna=False).index.values[0])\n",
+    "print(df.article_id.value_counts(dropna=False).values[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "most_viewed_article_id = \"1429.0\" # The most viewed article in the dataset as a string with one value following the decimal \n",
-    "max_views = 937# The most viewed article in the dataset was viewed how many times?"
+    "most_viewed_article_id = str(df.article_id.value_counts(dropna=False).index.values[0]) # The most viewed article in the dataset as a string with one value following the decimal \n",
+    "max_views = df.article_id.value_counts(dropna=False).values[0]# The most viewed article in the dataset was viewed how many times?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -653,7 +654,7 @@
        "4     1276.0          deploy your python model as a restful api        5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -801,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -883,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -955,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -986,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -1094,7 +1095,7 @@
        "       'why even a moth’s brain is smarter than an ai'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -1144,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -1253,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -1298,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1308,7 @@
        "242"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -1332,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -1384,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -1400,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -1434,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -1476,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -1502,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -1514,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -1741,7 +1742,7 @@
        "[5 rows x 714 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -1789,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -1848,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1922,7 @@
        "4     1276.0          deploy your python model as a restful api        5"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -1973,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
@@ -2067,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -2079,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -2116,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -2214,13 +2215,21 @@
    "source": [
     "**Your response here.**\n",
     "\n",
-    "Overall, the accuracy we observe is so high as to cause a lot of suspicion about the model's validity. While the plot does go downwards as we introduce more latent variables, the absolute difference is so small that the difference is negligible. Additionally, the evaluation criteria (article views) is so sparse that simply assuming a user has read nothing results in a very high score. \n",
+    "### Model Performance\n",
+    "Overall, the accuracy we observe is so high as to cause a lot of suspicion about the model's validity. The accuracy here is largely driven by 0 values in the user-item-matrix. In the scoring method provided (accuracy), we could simply assign 0s all the way through and score very well. As such, our measurement method here is flawed. \n",
     "\n",
-    "Introducing recall as a metric paints a much more accurate picture. We are rarely able to reassemble the test data by using the training data. The data we have access to is just too sparse to come up with useful \"latent variables\" for identifying articles.\n",
+    "Introducing recall as a metric paints a much clearer picture. We are rarely able to reassemble the test data by using the training data. The data we have access to is just too sparse to come up with useful \"latent variables\" for identifying articles. Because our recall is so low, our model overall is doing a pretty poor job.\n",
     "\n",
     "We currently have no indication if a user liked an article. If we have no intention of adding a \"like\" system, I would simply suggest we just use our \"Most popular\" approaches from above, or using what our neighbors have read. \n",
     "\n",
-    "I did not explore the NLP possibility here, but I believe using NLP to categorize the articles would provide much more information for suggesting new articles. Without a \"like\" system, I do not think SVD is a viable approach."
+    "I did not explore the NLP possibility here, but I believe using NLP to categorize the articles would provide much more information for suggesting new articles. Without a \"like\" system, I do not think SVD is a viable approach.\n",
+    "\n",
+    "### How is our model doing?\n",
+    "I have suggested that I *think* our non-SVD models (collaborative and rank recommendations) are doing well. Specifically, I think that we should use our user-user-recs2 function, which takes similarr users AND article rankings into account. When we have a new user, we should just default to pure article rankings. However, what if just article ranking alone is best?\n",
+    "\n",
+    "We could try setting up an A/B test that could help us decide if article ranking or collaborative filtering is a more effective strategy. We would need to engineer a system to properly, randomly assign users to two groups, \"ranking\" and \"collaborative.\" We could then track future engagement from these users (measured as article interaction counts per user) to decide which system we would want to use.\n",
+    "\n",
+    "There are a ton of considerations in this plan, however. Do we want to look at existing users, or new users? We inherently cannot use the collaborative filter on new users, so maybe we would only select users with a minimum number of interactions. However, this is another problem, since our median user only interacts with 3 articles, which is a pretty small number for us to enable effective collaborative filtering. However, getting more engagement out of our median user is probably a very effective way to drive overall engagement, so it is still worth developing a test around this plan."
    ]
   },
   {
@@ -2252,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -2263,7 +2272,7 @@
        "0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
